--- a/lib/views/layout_old.erb
+++ b/lib/views/layout_old.erb
@@ -13,36 +13,38 @@
           <div class="logo">FortyTwo</div>
           <div class="navigation">
             <ul>
-              <li id="start"><a href="/">Start</a></li>
-              <li id="timetracking"><a href="/timetracking">TimeTracking</a></li>
-              <li id="worklets"><a href="/features">Features</a></li>
-              <li id="roadmap"><a href="/roadmap">Roadmap</a></li>
+              <li>Start</li>
+              <li>TimeTracking</li>
+              <li>Roadmap</li>
+              <li>Messages</li>
             </ul>
           </div>
           <div class="session">
             <% if session[:user] %>
-              <%= session[:user] %> | <a href="/logout">logout</a>
+            <%= session[:user] %>
             <% else %>
-              nicht angemeldet
+            nicht angemeldet
             <% end %>
           </div>
-          <div class="ft_cf"></div>
         </div>
-      </div>
-      <div class="subheader_wrap">
-        <ul class="filters">
-          <li>Project Filters:</li>
-          <li><span class="btn_s_active">all</span></li>
-        </ul>
       </div>
       <div class="content_wrap">
         <div class="left">
           <h3>Users</h3>
-          <ul class="list">
+          <ul>
             <% for user in @users %>
-              <li><%= user.name %></li>
+            <li><%= user.name %></li>
             <% end %>
           </ul>
+          <div class="button">New</div>
+          <form id="insert_form">
+          <ul class="insert_data">
+            <li>
+              <input name="keyvalue[0][key]" class="small" /><input name="keyvalue[0][value]" class="large" /><span class="btn_add">+</span>
+            </li>
+          </ul>
+          </form>
+          <span class="btn_l save">Speichern</span>
         </div>
         <div class="middle">
           <%= yield %>
