--- a/lib/public/stylesheets/style.css
+++ b/lib/public/stylesheets/style.css
@@ -9,9 +9,9 @@ h3 {display:inline; font-size:14px; margin:0 3px 0 0; padding:0;}
 .ui-autocomplete li {padding: 3px 5px 0 5px; }
 
 .wrapper {}
-.content_wrap {position:relative; left:50%; margin-left:-490px; width:980px; border-top: 2px dotted #ccc; padding-top:10px;}
-.header_wrap {position:relative; left:50%; margin-left:-490px; width:980px;}
-.subheader_wrap {position:relative; left:50%; margin-left:-490px; width:980px;}
+.content_wrap {position:relative; left:50%; margin-left:-600px; width:1200px; border-top: 2px dotted #ccc; padding-top:10px;}
+.header_wrap {position:relative; left:50%; margin-left:-600px; width:1200px;}
+.subheader_wrap {position:relative; left:50%; margin-left:-600px; width:1200px;}
 
 .header {height:50px; background-color: #000; box-shadow: 0px 9px 17px #888; margin:0 0 10px 0;}
 .logo {float:left; padding:13px 0 0 0px; font-size:18px; color:#fff;}
@@ -25,12 +25,12 @@ h3 {display:inline; font-size:14px; margin:0 3px 0 0; padding:0;}
 .filters {margin:5px 0 10px 125px; padding:0; list-style:none; font-size:11px;}
 .filters li {display:inline; margin-right:10px;}
 
-.session {width:150px; float:right; margin-top:16px;}
+.session {float:right; margin-top:16px;}
 .session a {color:#999;}
 .session a:active {color:#999;}
 
 .left {width:150px;; float:left;} /* border:1px solid #ccc; */
-.middle {width:510px; float:left;}
+.middle {width:710px; float:left;}
 .right {width:300px; float:right;}
 
 .button {width:60px; padding:5px; border-radius:3; color:#fff; cursor:pointer; text-align:center; background-color:#99cc00;}
@@ -41,12 +41,13 @@ h3 {display:inline; font-size:14px; margin:0 3px 0 0; padding:0;}
 .form_wrap {}
 .form_wrap input[type=text] {width:100%; border:1px solid #ccc; padding:8px;}
 
-#time_form input.duration {width:30px;}
-#time_form input.large {width:300px;}
+input.duration {width:50px;}
+input.large {width:300px;}
 
 
 .insert_data {list-style:none; margin:0 0 10px 0; padding:0;}
 .insert_data li {clear:both; padding:15px 0 0 0;}
+.insert_data li label {float:left; width:105px; padding-top:5px;}
 .insert_data input {padding:5px; margin-right:5px; background-color:#fff; border-radius:3; border:1px solid #ccc;}
 .insert_data input.small {width:100px;}
 .insert_data input.large {width:350px;}
