--- a/lib/views/login.erb
+++ b/lib/views/login.erb
@@ -26,7 +26,7 @@
           <form id="insert_form" action="/authenticate" method="POST">
           <ul class="insert_data">
             <li><input name="user" value="" class="large" /></li>
-            <li><input type="submit" />
+            <li><input type="submit" name="go for it" />
           </ul>
           </form>
         </div>
