--- a/lib/views/roadmap.erb
+++ b/lib/views/roadmap.erb
@@ -1,9 +1,7 @@
-<h3>Neues Feature</h3>
-<form id="insert_form">
-  <ul class="insert_data">
-    <li>
-      <input name="keyvalue[0][key]" class="small" /><input name="keyvalue[0][value]" class="large" /><span class="btn_add">+</span>
-    </li>
+<h3>Roadmap</h3>
+<div class="roadmap_wrap">
+  <ul>
+    <li>Import API</li>
+    <li>Report Builder</li>
   </ul>
-</form>
-<span class="btn_l save">Speichern</span>
+</div>
