--- a/lib/views/worklets.erb
+++ b/lib/views/worklets.erb
@@ -1,19 +1,32 @@
 <h3>Neues Worklet</h3>
-<form id="insert_form">
+<form id="worklet" action="/worklet/create">
   <ul class="insert_data">
     <li>
       <label>Title</label><input name="worklet[title]" class="large" />
     </li>
     <li>
-      <label>Description</label><input name="worklet[description]" class="large" /><span class="btn_add">+</span>
+      <label>Description</label><input name="worklet[description]" class="large" />
+    </li>
+    <li>
+      <label>Status</label><input name="worklet[status]" class="large" />
+    </li>
+    <li>
+      <label>Roadmap</label><input name="worklet[roadmap]" class="large" /><span class="btn_add">+</span>
     </li>
   </ul>
+  <input type="submit" value="Speichern" />
 </form>
-<span class="btn_l save">Speichern</span>
 <hr />
 <h3>Worklets</h3>
 <ul class="list">
   <% for worklet in @worklets %>
-  <li><span class="btn_s"><%= worklet.created_at.strftime('%d.%m. %H:%M') %></span> <%= worklet.title %></li>
+    <li>
+      <span class="btn_s"><%= worklet.created_at.strftime('%d.%m. %H:%M') %></span>
+      <ul class="item">
+        <li><%= worklet.title %> (<%= worklet.user %>)</li>
+        <li><label>Description:</label> <%= worklet.description %><li>
+      </ul>
+      <div class="ft_cf"></div>
+    </li>
   <% end %>
 </ul>
